--- a/index.html
+++ b/index.html
@@ -424,7 +424,9 @@
         });
 
         // Initialize
-        render();
+        window.onload = function() {
+            render();
+        };
     </script>
 </body>
 </html>
