--- a/index.html
+++ b/index.html
@@ -292,21 +292,21 @@
         let items = [
             {
                 id: 1,
-                品名: "有机罗马生菜 (L-01)",
-                分类: "Vegetable",
-                历史价格: [4.50, 4.20, 3.80] // Index 0 is latest
+                name: "有机罗马生菜 (L-01)",
+                category: "Vegetable",
+                history: [4.50, 4.20, 3.80] // Index 0 is latest
             },
             {
                 id: 2,
-                品名: "富士红 (Fuji-Red)",
-                分类: "Fruit",
-                历史价格: [12.80, 13.50, 13.00]
+                name: "富士红 (Fuji-Red)",
+                category: "Fruit",
+                history: [12.80, 13.50, 13.00]
             },
             {
                 id: 3,
-               品名: "高筋面粉原料 (W-Base)",
-               分类: "Raw Material",
-               历史价格: [6.20, 6.00, 5.95]
+               name: "高筋面粉原料 (W-Base)",
+               category: "Raw Material",
+               history: [6.20, 6.00, 5.95]
             }
         ];
 
