--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CORE_SYSTEM // V5.0_SINGULARITY</title>
     <style>
+/* 1. 全局重置盒模型 (核心修复代码) */
+* {
+    box-sizing: border-box;
+}
+
+/* 2. 赛博朋克风格滚动条 (视觉优化) */
+/* 滚动条整体轨道 */
+::-webkit-scrollbar {
+    width: 6px; /* 变得很细 */
+    height: 6px;
+}
+
+/* 滚动条背景 (与网页背景融合) */
+::-webkit-scrollbar-track {
+    background: var(--bg-deep); 
+}
+
+/* 滚动条滑块 (霓虹青色) */
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 243, 255, 0.3); 
+    border-radius: 3px;
+    transition: all 0.3s;
+}
+
+/* 滑块悬停 (发光特效) */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--neon-cyan);
+    box-shadow: 0 0 10px var(--neon-cyan);
+}
         :root {
             --bg-deep: #000000;
             --neon-cyan: #00f3ff;
